--- a/starter/backend/package.json
+++ b/starter/backend/package.json
@@ -18,11 +18,15 @@
     "@middy/core": "^3.6.2",
     "@middy/http-cors": "^3.6.2",
     "@middy/http-error-handler": "^3.6.2",
+    "aws-sdk": "^2.1640.0",
+    "aws-xray-sdk": "^3.9.0",
     "aws-xray-sdk-core": "^3.9.0",
     "axios": "^1.7.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
+    "middy": "^0.36.0",
     "serverless-iam-roles-per-function": "^3.2.0",
+    "source-map-support": "^0.5.21",
     "uuid": "^9.0.1",
     "winston": "^3.13.0"
   }
