--- a/starter/backend/serverless.yml
+++ b/starter/backend/serverless.yml
@@ -2,7 +2,7 @@
 org: thangvlth
 # "app" enables Serverless Framework Dashboard features and sharing them with other Services.
 app: project4
-service: serverless-todo-app-1
+service: serverless-todo-app-3
 
 plugins:
   - serverless-iam-roles-per-function
@@ -19,16 +19,17 @@ provider:
     apiGateway: true
 
   environment:
-    PROJECT_NAME: serverless-todo-app-1
-    TODOS_TABLE: Todos-1-${self:provider.stage}
+    PROJECT_NAME: serverless-todo-app-3
+    TODOS_TABLE: Todos-3-${self:provider.stage}
     TODOS_CREATED_AT_INDEX: CreatedAtIndex
-    S3_BUCKET_NAME: serverless-1-todo-bucket-${self:provider.stage}
-    ATTACHMENT_S3_BUCKET: thangvlth-udacity-1-${self:provider.stage}
+    S3_BUCKET_NAME: serverless-3-todo-bucket-${self:provider.stage}
+    ATTACHMENT_S3_BUCKET: thangvlth-udacity-3-${self:provider.stage}
     SIGNED_URL_EXPIRATION: 300
 
   logs:
     # Enable API Gateway logs
-    restApi: true
+    # https://forum.serverless.com/t/lambda-created-custom-resource-apigw-cw-role-what-is-it/9529/8
+    # restApi: true
 
 functions:
 
