--- a/starter/client/.env
+++ b/starter/client/.env
@@ -1,3 +1,3 @@
 REACT_APP_AUTH0_DOMAIN=dev-6fxrgm4vk60sjk8a.us.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=4x5IXVPOzWqVwEASsTvOqe6Ddg56NsCv
-REACT_APP_API_ENDPOINT=https://n07ozx031k.execute-api.us-east-1.amazonaws.com/dev
+REACT_APP_API_ENDPOINT=https://ngfzv08jah.execute-api.us-east-1.amazonaws.com/dev
